# crim-flapping-bot

./: .gitignore  README.md
arduino/: Makefile  README
arduino/include/arduino-core/: wiring.h
arduino/include/comm/: arduino_mavlink_packet_handler.hpp
arduino/src/actuator/: Makefile  (+4 more)
arduino/test/: chr_um6_test.cpp  chr_um6_test_2.cpp  encoder_test_2.cpp  esc_test.cpp  esc_test_2.cpp  glide_and_twist_controller_test.cpp  glide_and_twist_controller_test_2.cpp  glide_and_twist_controller_test_3.cpp  hall_effect_sensor_test.cpp  hello.cpp  interrupt_test.cpp  mavlink_packet_test.cpp  mavlink_packet_test_2.cpp  one_ch_rc_test.cpp  rc_test.cpp  rc_test_2.cpp  rc_test_3.cpp  rc_test_4.cpp  rc_test_5.cpp  serial_test.cpp  servo_test.cpp  servo_test_2.cpp  servo_test_3.cpp  timer_int_test.cpp
common/: README
doc/ee-spec/: compile  ee-spec.tex
flymaple/: Makefile  README  Untitled Document
flymaple/gps/: Adafruit_GPS.cpp  Adafruit_GPS.h  test-1.cpp  test-2.cpp
flymaple/misc/: sw_reset.cpp  test_serialUSB.cpp
flymaple/rc/: test-rc.cpp
flymaple/test/: test_servo_motor_rc-2.cpp  test_servo_motor_rc-3.cpp  test_servo_motor_rc.cpp
flymaple/wirish/: boards.cpp
flymaple/xbee/: test-checksum.cpp  test-packet.cpp
gnd-ctrl/: CMakeLists.txt  Makefile
gnd-ctrl-ros/: README
gnd-ctrl/Camera/: Testing
gnd-ctrl/camera/: DisplayImage  DisplayImage.cpp  Makefile
gnd-ctrl/inc/serial-port/: GndCtrlPacket.h
gnd-ctrl/lib/serial-port/: CMakeLists.txt  Makefile
gnd-ctrl/test/: CMakeLists.txt  Makefile  test-receiving-packet.cpp  test-serial-2.cpp  test-serial.cpp
(+175 files in other folders)
